# rtas2021_artifact

./: Makefile  README.md  standalone_arm.ini
binsec/: .gitignore  (+2 more)
libase/: .gitignore  .merlin  Makefile  Makefile.depend_to_dot  basis.ml  basis_sig.ml  codex_config.ml  codex_log.ml  constraints.ml  domain_sig.ml  domains.ml  lattice_sig.ml  lattices.ml  libase.opam  libc.c  quadrivalent_Lattice.ml  quadrivalent_Lattice.mli  region_analysis.ml  region_analysis.mli  region_analysis_sig.ml  smtbackend.ml  smtbackend.mli  term.ml  term.mli  term_constructors.ml  term_constructors_gadt.ml  term_constructors_gadt.mli  term_types.ml
libase/basis/: basis_Assert_False_Transfer_Functions.ml  basis_noop_transfer_functions.ml  basis_prod.ml  basis_prod.mli  binary_to_integer_basis.ml  binary_to_integer_basis.mli  dummy_basis.ml  ival_basis.ml  ival_basis.mli  ival_with_sentinel_basis.ml  ival_with_sentinel_basis.mli  quadrivalent_basis.ml  quadrivalent_basis.mli  reduced_prod_basis.ml  reduced_prod_basis.mli  sentinel_basis.ml  sentinel_basis.mli
libase/constraints/: constraints_aliases.ml  constraints_condition.ml  constraints_const_eval.ml  constraints_const_eval.mli  constraints_constraints.ml  constraints_constraints.mli  constraints_constraints_sig.ml  constraints_slicing.ml  constraints_slicing.mli  constraints_smt.ml  constraints_smt.mli
libase/domains/: assert_False_Transfer_Functions.ml  bitwise_domain.ml  bitwise_domain.mli  constraint_domain2.ml  constraint_domains_sig.mli  evaluating.ml  evaluating.mli  lift_integer_domain_to_binary_domain.ml  lift_integer_domain_to_binary_domain.mli  prod_domain.ml  term_domain.ml  term_domain.mli  with_Bottom.ml  with_Bottom.mli  with_Noop.ml
libase/domains/constraints/: domains_constraints_assert_false.ml  domains_constraints_assert_false.mli  domains_constraints_constraint_propagation.ml  domains_constraints_constraint_propagation.mli  domains_constraints_nonrelational.ml  domains_constraints_nonrelational.mli  domains_constraints_product.ml  domains_constraints_product.mli
libase/domains/memory/: memory_domain.ml  memory_domain.mli  memory_sig.ml  region_binary.ml  region_binary.mli  region_numeric_offset.ml  region_numeric_offset.mli  region_separation.ml  region_separation.mli  region_suffix_tree.ml  region_suffix_tree.mli  type_domain.ml  type_domain.mli  with_focusing.ml  with_focusing.mli
libase/ext/: WTO.ml  WTO.mli
libase/ext/framac_ival/: abstract_interp.ml  abstract_interp.mli  bottom.ml  bottom.mli  c_bindings.c  fc_float.ml  float_interval.ml  float_interval.mli  float_interval_sig.mli  float_sig.mli  floating_point.ml  floating_point.mli  fval.ml  fval.mli  ival.ml  ival.mli  ival_noinf.ml  ival_noinf.mli  pretty_utils.ml  pretty_utils.mli
libase/frama-c/: .merlin  Makefile  build_semantic_equations.ml  codex_options.ml  codex_register.ml  compilation_to_term.ml  compilation_to_term.mli  printhtml.ml  printhtml.mli  region_analysis_stmt.ml  region_analysis_stmt.mli  test_types.ml  varinfo_Enclosing_Function.ml  varinfo_Enclosing_Function.mli
libase/graph/: regex.ml  regex.mli
libase/lattices/: assert_False_Lattice.ml  dummy_Lattice.ml  prod_Lattice.ml  prod_Lattice.mli  set_Lattice.ml  set_Lattice.mli
libase/single_value_abstraction/: single_value_abstraction.ml  single_value_abstraction_standard.ml
libase/smtbackend/: smtbackend_aliases.ml  smtbackend_smtlib.ml  smtbackend_smtlib.mli  smtbackend_smtlib_sig.ml  smtbackend_term_to_smt.mli
libase/term/: term_dag.ml  term_dag.mli  term_hashcons.ml  term_hashcons.mli  term_hashtbl_stack.ml  term_hashtbl_stack.mli  term_pretty.ml  term_pretty.mli  term_smart_constructors.ml  term_smart_constructors.mli  term_smart_constructors_administrative_reduction.ml  term_smart_constructors_administrative_reduction.mli  term_smart_constructors_bdd_rewrite.ml  term_smart_constructors_bdd_rewrite.mli  term_smart_constructors_no_rewrite.ml  term_smart_constructors_no_rewrite.mli  term_smart_constructors_sig.ml  term_type.ml  term_type.mli  term_type_inference.ml  term_type_inference.mli  term_utils.ml  term_utils.mli
libase/tests/: Makefile  abs.c  abs.exp_dump  propag01.c  propag01.exp_dump  propag01.result  propag02.c  propag02.exp_dump  propag02.result  propag03.c  propag03.exp_dump  propag03.result  simple010.c  simple010.exp_dump  simple010.result  simple011.c  simple011.result  simple012.c  simple012.exp_dump  simple013.c  simple014.c  simple014.exp_dump  simple014.result  simple015.c  simple015.exp_dump  simple015.result  simple020.c  simple020.result  simple050.c  simple050.exp_dump  simple060.c  simple060.exp_dump  simple060.result  simple070.c  simple070.exp_dump  simple070.result  simple080.c  simple080.exp_dump  simple080.result  simple09.exp_dump  (+248 more)
libase/tests/big/: adpcm_no_unrolled.c  adpcm_no_unrolled.exp_dump  adpcm_no_unrolled.oracle  simple_monit.c  simple_monit.exp_dump  simple_monit.result
libase/tests/horn/: t035.c  t035.exp_dump  t035.result  t037.c  t037.exp_dump  t037.result
libase/transfer_functions/: builtin.ml  transfer_functions.ml  transfer_functions_concrete.ml  transfer_functions_conversions.ml  transfer_functions_conversions.mli  transfer_functions_flags.ml  transfer_functions_ids.ml  transfer_functions_sig.ml
libase/types/: ctypes.ml  ctypes.mli
libase/utils/: alarm_logger.ml  bdd.ml  bdd.mli  condition_map.ml  condition_map.mli  datatype_sig.ml  datatype_sig.mli  dynamic_array.ml  dynamic_array.mli  extstdlib.ml  extstdlib.mli  immutable_array.ml  immutable_array.mli  immutable_dynamic_array.ml  immutable_dynamic_array.mli  int_builtins.ml  int_builtins_c.c  interval_map.ml  interval_map.mli  mutable_radix_trie.ml  mutable_radix_trie.mli  not_implemented.ml  okasakimap.ml  okasakimap.mli  smallmap.ml  smallmap.mli  utils.ml
unisim/extra/cacti/: AUTHORS  COPYING  INSTALL  Makefile.am  README  cacti4_2.cc  cacti4_2.hh  configure.ac
unisim/extra/libieee1666/: AUTHORS  COPYING  INSTALL  Makefile.am  README  bootstrap.sh  configure.ac
unisim/unisim_tools/: COPYING  INSTALL  Makefile.am  build-configure.sh  configure.ac
(+5101 files in other folders)
