opam-version: "2.0"
version: "~dev"
synopsis: ""
maintainer: "Matthieu Lemerre <matthieu.lemerre@cea.fr>"
authors: "Matthieu Lemerre <matthieu.lemerre@cea.fr>"
license: ""
homepage: ""
bug-reports: ""
depends: [
  "mlcuddidl" "zarith" "ocamlgraph"
#  "specify-dependencies-here" {>= "optional-version"}
]
build: [
#  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
dev-repo: "git+https://"
url {
  src: "git:git@git.frama-c.com:/lemerre/libase/"
}



